kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exam
  name: backend-deployment
  labels:
    app: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-deployment
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      name: backend-deployment
      labels:
        app: backend-deployment
    spec:
      containers:
        - name: backend-deployment
          image: imgoune/thebackend:3.0
          resources:
            requests:
              cpu: "1"
              memory: "500Mi"
            limits:
              cpu: "1.5"
              memory: "1Gi"
          imagePullPolicy: IfNotPresent
          
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: exam
spec:
  selector:
    app: backend-deployment
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
