kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam
  labels:
    app: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-deployment
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      name: frontend-deployment
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: frontend-deployment
          image: imgoune/frontend:latest
          resources:
            requests:
              cpu: "0.5"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "500Mi"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          startupProbe:
            httpGet:
              path: "/"
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 30
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  namespace: exam
  name: frontend-service
spec:
  selector:
    app: frontend-deployment
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
